--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -1,12 +1,24 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Facelet Title</title>
+        <title>Upload de imagens</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+        <p:growl id="messages" showDetail="true"/>
+
+        <div class="card">
+            <h5>Single</h5>
+            <h:form enctype="multipart/form-data">
+                <p:fileUpload value="#{fileUploadView.file}" mode="simple" skinSimple="true"/>
+
+                <p:commandButton value="Submit" ajax="false" action="#{fileUploadView.upload}" styleClass="p-mt-3 ui-button-outlined p-d-block"/>
+            </h:form>
+        </div>
+
     </h:body>
 </html>
 
