--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -13,9 +13,11 @@
         <div class="card">
             <h5>Single</h5>
             <h:form enctype="multipart/form-data">
-                <p:fileUpload value="#{fileUploadView.file}" mode="simple" skinSimple="true"/>
+                <p:fileUpload value="#{uploadController.file}" mode="simple" skinSimple="true"/>
 
-                <p:commandButton value="Submit" ajax="false" action="#{fileUploadView.upload}" styleClass="p-mt-3 ui-button-outlined p-d-block"/>
+                <p:commandButton value="Submit" ajax="false" 
+                                 action="#{uploadController.upload}" 
+                                 styleClass="p-mt-3 ui-button-outlined p-d-block"/>
             </h:form>
         </div>
 
